src/objects/Package_Item__c.object
<CustomObject>
    <fields>
        <fullName>Base_Package_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Package Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 2) OR (3 AND 4) OR (5 AND 6)) AND 7</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Discount</value>
            </filterItems>
            <filterItems>
                <field>Package_Item__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Base Product</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bundle Discount</value>
            </filterItems>
            <filterItems>
                <field>Package_Item__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Bundle Product</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Extension Discount</value>
            </filterItems>
            <filterItems>
                <field>Package_Item__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Extension Product</value>
            </filterItems>
            <filterItems>
                <field>$Source.Package__c</field>
                <operation>equals</operation>
                <valueField>Package_Item__c.Package__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Package_Item__c</referenceTo>
        <relationshipLabel>Package Items</relationshipLabel>
        <relationshipName>Package_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <formula>TEXT(Product_Rate_Plan__r.BillingType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Item_No__c</fullName>
        <description>• Bundle Item Number to identity which package items belongs to the same bundle item number.
• Package items of the same bundle item share the same bundle item ID.</description>
        <label>Bundle Item No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_in_months__c</fullName>
        <description>• Effective duration of the package item.
• Value represent in number of months.</description>
        <label>Duration (In months)</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Month__c</fullName>
        <description>• Effective start of the package item.
• Value represent in number of months.</description>
        <label>Effective Start Month</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_All_In_One__c</fullName>
        <formula>IF(TEXT(Product_Rate_Plan__r.zqu__ZProduct__r.ProductPlatform__c) = &apos;All-In-One&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is All In One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Digital_2__c</fullName>
        <description>This field is use when in getting the Reason Code</description>
        <formula>IF(AND(TEXT(Product_Rate_Plan__r.zqu__ZProduct__r.ProductPlatform__c) != &apos;All-In-One&apos;, TEXT(Product_Rate_Plan__r.zqu__ZProduct__r.ProductPlatform__c) != &apos;Print&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Digital__c</fullName>
        <formula>IF(AND(TEXT(Product_Rate_Plan__r.zqu__ZProduct__r.ProductPlatform__c) != null, TEXT(Product_Rate_Plan__r.zqu__ZProduct__r.ProductPlatform__c) != &apos;Print&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Digital?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Magazine__c</fullName>
        <formula>IF(TEXT(Product_Rate_Plan__r.zqu__ZProduct__r.ProductSubType__c) = &apos;Magazine&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Magazine?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Newspaper__c</fullName>
        <formula>IF(TEXT(Product_Rate_Plan__r.zqu__ZProduct__r.ProductSubType__c) = &apos;Newspaper&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Newspaper?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Print__c</fullName>
        <formula>IF(TEXT(Product_Rate_Plan__r.zqu__ZProduct__r.ProductPlatform__c) = &apos;Print&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <description>The package name for which the package item is being created will be displayed.</description>
        <label>Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Package Items</relationshipLabel>
        <relationshipName>Package_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>This is the Package Item Price with including relevant discount component. Only valid for &quot;Product&quot; Record Type Items. The business need of this field is for Bundle Product and Extension Product as they have different price than the Package Price.</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Family2__c</fullName>
        <formula>Product_Family__r.Product_Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Package Items</relationshipLabel>
        <relationshipName>Package_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Platform__c</fullName>
        <formula>TEXT(Product_Rate_Plan__r.zqu__ZProduct__r.ProductPlatform__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>zqu__ProductRatePlan__c.zqu__Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Package Items</relationshipLabel>
        <relationshipName>Package_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Package Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Package Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Items</pluralLabel>
    <recordTypes>
        <fullName>Base_Product</fullName>
        <active>true</active>
        <description>The base SPH product to be added to the package</description>
        <label>Base Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bundle_Discount</fullName>
        <active>true</active>
        <description>Discount to be added to a bundle SPH Product</description>
        <label>Bundle Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bundle_Product</fullName>
        <active>true</active>
        <description>SPH Product to be added in a bundle package type</description>
        <label>Bundle Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Discount</fullName>
        <active>true</active>
        <description>The discount associated with the base product.</description>
        <label>Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Extension_Discount</fullName>
        <active>true</active>
        <description>Discount to be associated with the extension SPH product. Extension discount rate plan will be configured to start immediately after the base product rate plan ends.</description>
        <label>Extension Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Extension_Product</fullName>
        <active>true</active>
        <description>SPH Product to be added as an extension in a Discount package Type. The extension rate plan will be configured to start immediately after the base product rate plan ends.</description>
        <label>Extension Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Base_Extension_To_Discount_Package_Ex</fullName>
        <active>true</active>
        <description>For package items: Base Product and Extension Product, only SPH Product can be added (with Rate Plan Type = Bill Plan). Not more than 1 Base Product and 1 Extension Product package items can be added to this type of package.</description>
        <errorConditionFormula>(RecordType.Name = &apos;Base Product&apos; || RecordType.Name = &apos;Extension Product&apos;) &amp;&amp; Product_Rate_Plan__r.RatePlanType__c != &apos;Bill Plan&apos; &amp;&amp; (ISPICKVAL(Package__r.Package_Type__c, &apos;Discount&apos;) &amp;&amp; ISPICKVAL(Package__r.Package_Sub_Type__c, &apos;Extension&apos;))</errorConditionFormula>
        <errorDisplayField>Base_Package_Item__c</errorDisplayField>
        <errorMessage>For package items: Base Product and Extension Product, only SPH Product can be added (with Rate Plan Type = Bill Plan).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Base_Package</fullName>
        <active>true</active>
        <description>Package of type: Grace Period &amp; Package Item of type: Base Product, must be able to select a Rate Plan of type: Proration only.
Package of any other type &amp; Package Item of type: Base Product, must be able to select a rate plan of type: Bill Plan only.</description>
        <errorConditionFormula>AND(Product_Rate_Plan__r.RatePlanType__c != &apos;Bill Plan&apos;, RecordType.Name = &apos;Base Product&apos;, NOT(ISPICKVAL( Package__r.Package_Type__c, &apos;Grace Period&apos;))) || AND(Product_Rate_Plan__r.RatePlanType__c != &apos;Proration&apos;, RecordType.Name = &apos;Base Product&apos;, ISPICKVAL( Package__r.Package_Type__c, &apos;Grace Period&apos;))</errorConditionFormula>
        <errorMessage>If Package type is &quot;Grace Period&quot;, Package Item must have &quot;Proration&quot; Product Rate Plan type. For all other Package types, Package Item must have &quot;Bill Plan&quot; Product Rate Plan type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Base_Package_Item_To_Base_Package</fullName>
        <active>true</active>
        <description>Only 1 package item, Base Product (with Rate Plan Type = Bill Plan) can be added to the base package.</description>
        <errorConditionFormula>(Package__r.Base_Product_Count__c &gt; 0) &amp;&amp; ISPICKVAL(Package__r.Package_Type__c, &apos;Base&apos;) &amp;&amp; ISNEW() &amp;&amp;  RecordType.Name = &apos;Base Product&apos; &amp;&amp;  Product_Rate_Plan__r.RatePlanType__c = &apos;Bill Plan&apos;</errorConditionFormula>
        <errorDisplayField>Base_Package_Item__c</errorDisplayField>
        <errorMessage>Only 1 package item, Base Product (with Rate Plan Type = Bill Plan) can be added to the base package.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discount_Package_Type</fullName>
        <active>true</active>
        <description>D-1429</description>
        <errorConditionFormula>AND(OR(RecordType.Name = &apos;Bundle Product&apos;,RecordType.Name = &apos;Bundle Discount&apos;),ISPICKVAL(Package__r.Package_Type__c,&apos;Discount&apos;))</errorConditionFormula>
        <errorMessage>Bundle Product and Bundle Discount must not be allowed in Package Type: Discount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Extension_Product_Package_Item_Duration</fullName>
        <active>true</active>
        <description>For Extension Product package item, the duration must not be NA.</description>
        <errorConditionFormula>ISPICKVAL(Package__r.Package_Sub_Type__c, &apos;Extension&apos;) &amp;&amp; RecordType.Name = &apos;Extension Product&apos; &amp;&amp;  ISPICKVAL(Duration_in_months__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Duration_in_months__c</errorDisplayField>
        <errorMessage>Please select a duration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grace_Period_Package_Type</fullName>
        <active>true</active>
        <description>For Package of Type &quot;Grace Period&quot;, only Base Product Package Item can be added.</description>
        <errorConditionFormula>AND(RecordType.Name != &apos;Base Product&apos;,  ISPICKVAL(Package__r.Package_Type__c, &apos;Grace Period&apos;))</errorConditionFormula>
        <errorMessage>Only Package Item of type &quot;Base Product&quot; can be added to Grace Period Package Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Item_Base_Initial</fullName>
        <active>true</active>
        <description>A Package Item of type &quot;Base Product&quot; must always be added first before adding a &quot;Discount&quot; Package Item.</description>
        <errorConditionFormula>(ISPICKVAL(Package__r.Package_Sub_Type__c, &apos;Single&apos;) || ISPICKVAL(Package__r.Package_Sub_Type__c, &apos;Tiered&apos;) || ISPICKVAL(Package__r.Package_Type__c, &apos;Add On&apos;)) &amp;&amp; Package__r.Base_Product_Count__c == 0 &amp;&amp; RecordType.Name != &apos;Base Product&apos;</errorConditionFormula>
        <errorMessage>A Package Item of type &quot;Base Product&quot; is required before you can add a &quot;Discount&quot; Package Item or &quot;Discount&quot; Package Items.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Item_Base_Initial_Extension</fullName>
        <active>true</active>
        <description>Base Product package item must be added before Extension Product package item can be added to the package.</description>
        <errorConditionFormula>ISPICKVAL(Package__r.Package_Sub_Type__c, &apos;Extension&apos;) &amp;&amp; Package__r.Extension_Product_Count__c == 0 &amp;&amp; Package__r.Base_Product_Count__c == 0 &amp;&amp; RecordType.Name != &apos;Base Product&apos;</errorConditionFormula>
        <errorMessage>Base Product package item must be added before Extension Product package item can be added to the package.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Item_Discount</fullName>
        <active>true</active>
        <description>Only Discount rate plan (with Rate Plan Type = Discount) can be added for the package item: Discount.</description>
        <errorConditionFormula>RecordType.Name = &apos;Discount&apos; &amp;&amp; Product_Rate_Plan__r.RatePlanType__c != &apos;Discount&apos;</errorConditionFormula>
        <errorDisplayField>Product_Rate_Plan__c</errorDisplayField>
        <errorMessage>Only Discount rate plan (with Rate Plan Type = Discount) can be added for the package item: &quot;Discount&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Item_Discount_Bundle</fullName>
        <active>true</active>
        <description>For package items: Bundle Discount, only SPH Product can be added (with Rate Plan Type = Discount)</description>
        <errorConditionFormula>RecordType.Name = &apos;Bundle Discount&apos; &amp;&amp; (Product_Rate_Plan__r.RatePlanType__c != &apos;Discount&apos;) &amp;&amp; ISPICKVAL(Package__r.Package_Type__c, &apos;Bundle&apos;)</errorConditionFormula>
        <errorDisplayField>Product_Rate_Plan__c</errorDisplayField>
        <errorMessage>For package items: Bundle Discount, only SPH Product can be added (with Rate Plan Type = Discount)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Item_Discount_Extension</fullName>
        <active>true</active>
        <description>Only Discount rate plan (with Rate Plan Type = Discount) can be added for the package item: Extension Discount.</description>
        <errorConditionFormula>ISPICKVAL(Package__r.Package_Sub_Type__c, &apos;Extension&apos;) &amp;&amp; RecordType.Name = &apos;Extension Discount&apos; &amp;&amp; Product_Rate_Plan__r.RatePlanType__c != &apos;Discount&apos;</errorConditionFormula>
        <errorDisplayField>Product_Rate_Plan__c</errorDisplayField>
        <errorMessage>Only Discount rate plan (with Rate Plan Type = Discount) can be added for the package item: Extension Discount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Item_Discount_Termed_Less_SubDur</fullName>
        <active>true</active>
        <description>The addition of the Effective Start Month and Duration must be less than the &quot;Subscription Duration&quot; of the Package.</description>
        <errorConditionFormula>OR(IsPickVal(Package__r.Package_Type__c, &apos;Discount&apos;),IsPickVal(Package__r.Package_Type__c, &apos;Add On&apos;)) &amp;&amp; (RecordType.Name = &apos;Discount&apos;) &amp;&amp; ISPICKVAL(Package__r.Subscription_Type__c, &apos;Termed&apos;) &amp;&amp; ((VALUE(TEXT(Effective_Start_Month__c)) + VALUE(TEXT(Duration_in_months__c)) - 1 ) &gt; VALUE(TEXT(Package__r.Subscription_Period__c)))</errorConditionFormula>
        <errorMessage>The addition of the Effective Start Month and Duration subtracted by 1 must be less than or equal to the &quot;Subscription Duration&quot; of the Package.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Item_Discount_Termed_Req</fullName>
        <active>true</active>
        <description>If the subscription type of the Package is &quot;Termed&quot;, the package item of type &quot;Discount&quot; must have both an Effective Start Month and a Duration.</description>
        <errorConditionFormula>ISPICKVAL(Package__r.Subscription_Type__c, &apos;Termed&apos;) &amp;&amp; ISPICKVAL(Duration_in_months__c, &apos;&apos;) &amp;&amp; RecordType.Name = &apos;Discount&apos;</errorConditionFormula>
        <errorDisplayField>Duration_in_months__c</errorDisplayField>
        <errorMessage>The package item of type &quot;Discount&quot; must have both an Effective Start Month and a Duration if the subscription type of the Package is &quot;Termed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Item_Extension_Initial_Extension</fullName>
        <active>true</active>
        <description>A Package Item of type &quot;Extension Product&quot; must always be added first before adding an &quot;Extension Discount&quot; Package Item.</description>
        <errorConditionFormula>ISPICKVAL(Package__r.Package_Sub_Type__c, &apos;Extension&apos;) &amp;&amp; Package__r.Extension_Product_Count__c == 0 &amp;&amp; Package__r.Base_Product_Count__c == 1 &amp;&amp; (RecordType.Name != &apos;Extension Product&apos; &amp;&amp; RecordType.Name != &apos;Discount&apos; &amp;&amp; RecordType.Name != &apos;Base Product&apos;)</errorConditionFormula>
        <errorMessage>A Package Item of type &quot;Extension Product&quot; is required before you can add an &quot;Extension Discount&quot; Package Item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Item_Product_Bundle</fullName>
        <active>true</active>
        <description>For package items: Bundle Product, only SPH Product can be added (with Rate Plan Type = Bill Plan)</description>
        <errorConditionFormula>RecordType.Name = &apos;Bundle Product&apos; &amp;&amp; (Product_Rate_Plan__r.RatePlanType__c != &apos;Bill Plan&apos;) &amp;&amp; ISPICKVAL(Package__r.Package_Type__c, &apos;Bundle&apos;)</errorConditionFormula>
        <errorDisplayField>Product_Rate_Plan__c</errorDisplayField>
        <errorMessage>For package items: Bundle Product, only SPH Product can be added (with Rate Plan Type = Bill Plan)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Type_Add_On</fullName>
        <active>true</active>
        <description>Only “Base Product” and “Discount” package items must be allowed to be saved for package type: Add-On</description>
        <errorConditionFormula>TEXT(Package__r.Package_Type__c) = &apos;Add On&apos; &amp;&amp;  RecordType.Name != &apos;Base Product&apos; &amp;&amp; RecordType.Name != &apos;Discount&apos;</errorConditionFormula>
        <errorDisplayField>Package__c</errorDisplayField>
        <errorMessage>Only Base Product and Discount package items must be allowed to be configured for package type: Add-On</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Type_Base</fullName>
        <active>true</active>
        <description>Only “Base Product” package item must be allowed to be saved for package type: Base</description>
        <errorConditionFormula>TEXT(Package__r.Package_Type__c) = &apos;Base&apos; &amp;&amp; (RecordType.Name != &apos;Base Product&apos;)</errorConditionFormula>
        <errorDisplayField>Package__c</errorDisplayField>
        <errorMessage>Only Base Product package item allowed to be configured for package type: Base.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Type_Bundle</fullName>
        <active>true</active>
        <description>Only “Bundle Product” and “Bundle Discount” package items must be allowed to be saved for package type: Bundle</description>
        <errorConditionFormula>TEXT(Package__r.Package_Type__c) = &apos;Bundle&apos; &amp;&amp; RecordType.Name != &apos;Bundle Product&apos; &amp;&amp; RecordType.Name != &apos;Bundle Discount&apos;</errorConditionFormula>
        <errorDisplayField>Package__c</errorDisplayField>
        <errorMessage>Only Bundle Product and Bundle Discount package items must be allowed to be configured for package type: Bundle</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Type_Discount</fullName>
        <active>false</active>
        <description>Extension Product and Extension Discount must only be allowed in package type: Discount
Only 1 Extension Product and 1 Extension Discount must be allowed
Bundle Product and bundle discount should not be allowed in package type: Discount</description>
        <errorConditionFormula>TEXT(Package__r.Package_Type__c) = &apos;Discount&apos; &amp;&amp; RecordType.Name != &apos;Extension Product&apos; &amp;&amp; RecordType.Name != &apos;Extension Discount&apos;</errorConditionFormula>
        <errorDisplayField>Package__c</errorDisplayField>
        <errorMessage>Only Extension Product and Extension Discount must  be allowed in package type: Discount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Type_Discount_Extension</fullName>
        <active>true</active>
        <description>Restricts a Package Item from being created if it is not of type &quot;Base Product&quot;, &quot;Discount&quot;, &quot;Extension Product&quot; or &quot;Extension Discount&quot; and the Package to be given the Package Item is of type &quot;Discount&quot;. Package subtype is &quot;Extension&quot;</description>
        <errorConditionFormula>ISPICKVAL(Package__r.Package_Sub_Type__c, &apos;Extension&apos;) &amp;&amp; TEXT(Package__r.Package_Type__c) = &apos;Discount&apos; &amp;&amp; (RecordType.Name != &apos;Base Product&apos; &amp;&amp; RecordType.Name != &apos;Discount&apos; &amp;&amp; RecordType.Name != &apos;Extension Product&apos; &amp;&amp; RecordType.Name != &apos;Extension Discount&apos;)</errorConditionFormula>
        <errorDisplayField>Package__c</errorDisplayField>
        <errorMessage>Please choose a Package Item type of &quot;Base Product&quot;, &quot;Discount&quot;, &quot;Extension Product&quot;, or &quot;Extension Discount&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Type_Discount_Test</fullName>
        <active>true</active>
        <description>Restricts a Package Item from being created if it is not of type &quot;Base Product&quot; or &quot;Discount&quot; and the Package to be given the Package Item is of type &quot;Discount&quot;</description>
        <errorConditionFormula>(ISPICKVAL(Package__r.Package_Sub_Type__c, &apos;Single&apos;) || ISPICKVAL(Package__r.Package_Sub_Type__c, &apos;Tiered&apos;)) &amp;&amp; TEXT(Package__r.Package_Type__c) = &apos;Discount&apos; &amp;&amp; (RecordType.Name != &apos;Base Product&apos; &amp;&amp; RecordType.Name != &apos;Discount&apos;)</errorConditionFormula>
        <errorDisplayField>Package__c</errorDisplayField>
        <errorMessage>Package Items of type &quot;Base Product&quot; and &quot;Discount&quot; are the only ones allowed for Packages with package type &quot;Discount&quot; and Sub Type of &quot;Single&quot; or &quot;Tiered&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RatePlanBillingPeriodEqualSubPeriod</fullName>
        <active>true</active>
        <description>If Subscription Type of the Package is &quot;Termed&quot; and the Billing Type of the Product Rate Plan is &quot;Full Prepaid&quot;, the Billing Period of the Product Rate Plan must be equal to the Subscription Period.</description>
        <errorConditionFormula>ISPICKVAL(Package__r.Subscription_Type__c, &apos;Termed&apos;) &amp;&amp; ISPICKVAL(Product_Rate_Plan__r.BillingType__c, &apos;Full Prepaid&apos;) &amp;&amp; TEXT(Package__r.Subscription_Period__c) != Product_Rate_Plan__r.BillingPeriod__c</errorConditionFormula>
        <errorDisplayField>Product_Rate_Plan__c</errorDisplayField>
        <errorMessage>Billing Period of the Product Rate Plan must be equal to the Subscription Period of the Package.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RatePlanNotFullPrepaidForEvergreen</fullName>
        <active>true</active>
        <description>If the Package has a Subscription Type of &quot;Evergreen&quot;, the Product Rate Plan to be chosen during creation of Package Item record should not have a Billing Type of &quot;Full Prepaid&quot;.</description>
        <errorConditionFormula>ISPICKVAL(Package__r.Subscription_Type__c, &apos;Evergreen&apos;) &amp;&amp;  ISPICKVAL(Product_Rate_Plan__r.BillingType__c, &apos;Full Prepaid&apos;)</errorConditionFormula>
        <errorDisplayField>Product_Rate_Plan__c</errorDisplayField>
        <errorMessage>If the Subscription Type is Evergreen, Billing Type of Product Rate Plan must be &quot;Recurring Prepaid&quot; or &quot;Recurring Postpaid&quot;.</errorMessage>
    </validationRules>
</CustomObject>